# objective-kernel

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md  ci.sh  codecov.yml  constructors.cpp  cxx.cpp  linker.ld  main.cpp  run_tests.sh
CMake/: isomaker.sh  runqemu.in  runtests.in
arch/: CMakeLists.txt  common.h  gdt.cpp  gdt.h  head.S  linker.ld  multiboot.h  port.h  reboot.h  sections.h
basic/: CMakeLists.txt  cxx.cpp  definitions.h  multiboot.h  new.h
ci/: ci.sh  run_tests.sh
drivers/: CMakeLists.txt  keyboard.cpp  keyboard.hpp  serial.cpp  serial.h  serial.hpp  tty.cpp  tty.hpp  vga.cpp  vga.h  vga.hpp
include/: linkage.h
kernel/: CMakeLists.txt  allocator.cpp  allocator.h  asm.h  boot.cpp  boot.hpp  cmdline_parser.cpp  cmdline_parser.hpp  component.cpp  component.hpp  console.cpp  console.h  cpp_support.cpp  cpp_support.hpp  cxx.cpp  cxx.hpp  definitions.h  definitions.hpp  error.hpp  head.S  heap_allocator.h  heap_allocator.hpp  kernel.cpp  kernel.hpp  lazy_instance.hpp  main.cpp  multiboot.cpp  multiboot.h  multiboot.hpp  new.hpp  printf.cpp  reboot.h
kernel/boot/: CMakeLists.txt  boot.cpp  boot.hpp  multiboot.hpp
kernel/boot/detail/: common.cpp  common.hpp  multiboot1.cpp  multiboot1.hpp  multiboot2.cpp  multiboot2.hpp
kernel/console/: CMakeLists.txt  console.cpp  console.hpp  logger.hpp  printf.cpp
kernel/cpu/: CMakeLists.txt  apm.cpp  apm.hpp  asm.h  common.h  common.hpp  cpu.cpp  cpu.hpp  crx.hpp  exceptions.S  exceptions.cpp  exceptions.h  exceptions.hpp  gdt.cpp  gdt.h  gdt.hpp  idt.cpp  idt.h  idt.hpp  io.hpp  irq.cpp  irq.hpp  irqs.h  irqs.hpp  mmu.hpp  pic.cpp  pic.hpp  pit.cpp  pit.hpp  reboot.hpp  registers.hpp  segment.hpp  stack_frame.cpp  stack_frame.h  stack_frame.hpp  tss.cpp  tss.hpp
kernel/device/: CMakeLists.txt  block.cpp  block.hpp  character.cpp  character.hpp  manager.cpp  manager.hpp
kernel/glue/: CMakeLists.txt  cxx.cpp  glue.cpp  yacppl.cpp
kernel/interfaces/: CMakeLists.txt  block_device.cpp  block_device.hpp  character_device.cpp  character_device.hpp  component.cpp  component.hpp  device_manager.cpp  device_manager.hpp  interrupt_handler.hpp  interrupt_manager.cpp  interrupt_manager.hpp  scheduler.cpp  scheduler.hpp
kernel/interrupt/: CMakeLists.txt  irq.cpp  irq.hpp  manager.cpp  manager.hpp
kernel/logger/: CMakeLists.txt  logger.cpp  logger.hpp  printf.cpp
kernel/memory/: CMakeLists.txt  allocator.cpp  allocator.h  allocator.hpp  heap_allocator.h  heap_allocator.hpp  memory.cpp  memory.hpp  paging.cpp  paging.h  paging.hpp  physical_memory_manager.cpp  physical_memory_manager.hpp  virtual_memory_manager.cpp  virtual_memory_manager.hpp
kernel/memory/paging/: frames_allocator.hpp  paging.cpp  paging.hpp
kernel/scheduler/: CMakeLists.txt  process.cpp  process.h  process.hpp  schedulable.hpp  scheduler.cpp  scheduler.hpp
kernel/time/: CMakeLists.txt  time.cpp  time.hpp
kernel/vfs/: CMakeLists.txt  block_device.cpp  block_device.hpp  cache.cpp  cache.hpp  definitions.hpp  dir_entry.hpp  dummyfs.hpp  file.cpp  file.hpp  file_system.hpp  globals.cpp  mount_point.hpp  ramfs.cpp  ramfs.hpp  vfs.cpp  vfs.hpp  vnode.cpp  vnode.hpp
lib/: CMakeLists.txt  cstdio.h  cstring.cpp  cstring.h  ctype.h  printf.cpp
scripts/: create_test_images.sh  isomaker.sh  runtests.in
scripts/ci/: ci.sh  run_tests.sh
tests/: CMakeLists.txt  allocator.cpp  main.cpp  ramfs.cpp  tests.h  vfs.cpp
tests/01/: CMakeLists.txt  console.cpp  main.cpp  ramfs.cpp  scheduler.cpp  sprintf.cpp  vfs.cpp
tests/01/stubs/: gdt.cpp  pit.cpp  tss.cpp
tests/02/: CMakeLists.txt  main.cpp  ramfs.cpp  vfs.cpp
tests/modules/: utils.cmake
tests/ut/: CMakeLists.txt  console.cpp  main.cpp  vfs.cpp
